FileSystemLike (#5912)